--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Diseñador freelancer</title>
      <link rel="preload" href="css/styles.css" as="style">
-     <link href="stylesheet" href="css.css/normalize.css"
+     <link href="stylesheet" href="css.css/normalize.css">
      <link href="https://fonts.googleapis.com/css2?family=Krub&display=swap" rel="stylesheet">
      <link href="css.css/styles.css" rel="stylesheet"as="style">
 
@@ -14,7 +14,7 @@
 
     
 <body>
-    <header>
+    <header class="header">
         <h1 class="titulo">Natalia Roldan 
             <span>freelancer</span>
         </h1>
