--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Diseñador freelancer</title>
-     <link rel="preload" href="css/styles.css" as="style">
-     <link href="stylesheet" href="css.css/normalize.css">
+     <link rel="preload" href="css/style.css" as="style">
+     <link href="stylesheet" href="css/normalize.css">
      <link href="https://fonts.googleapis.com/css2?family=Krub&display=swap" rel="stylesheet">
-     <link href="css.css/styles.css" rel="stylesheet"as="style">
+     <link href="css/style.css" rel="stylesheet"as="style">
 
   
 </head>
